# smart-lab-resource

./: .replit  BookingManager.java  JavaGateway.java  README.md  TimeUtils.java  auth.py  database.py  java_bridge.py  package-lock.json  replit.nix  settings.py  slab_app.py  styles.py  utils.py
SmartLabManager/SmartLabManager/: app.py  booking.py  compile_java.sh  dashboard.py  equipment_management.py  profile.py  pyproject.toml  run_java_gateway.sh  slab_app.py
SmartLabManager/SmartLabManager/assets/buttons/: buttons.css
SmartLabManager/SmartLabManager/assets/default_profile/: user_avatar.py
SmartLabManager/SmartLabManager/attached_assets/: Pasted-The-Smart-Lab-Resource-Management-System-S-Lab-is-a-highly-advanced-fully-automated-web-based-pl-1742366039881.txt  Pasted-The-Smart-Lab-Resource-Management-System-S-Lab-is-a-highly-advanced-web-based-platform-designed-e-1742367144000.txt  th.avif
SmartLabManager/SmartLabManager/java_gateway/: JavaGateway.java
SmartLabManager/SmartLabManager/java_src/: TimeManager.java
backend/: db.sqlite3  requirements.txt
backend/apps/accounts/: admin.py  auth.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/analytics/: admin.py  models.py  serializers.py  urls.py
backend/apps/bookings/: urls.py  (+6 more)
backend/config/: settings.py  urls.py
backend/core/: celery.py  health.py  middleware.py  schema.py  settings.py  storage.py  tasks.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
project/: index.html  package-lock.json  package.json
project/src/: App.tsx
(+127 files in other folders)
